Auto-disable marshaller if requisite module/package is closed.